@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-settings-9999.ebuild 902 RMD160 ae68159fa7fe840dbd2429adad639df1ca19745f SHA1 b9ba89e86823e582f8f6c4782f226c1b64ed8414 SHA256 ba5c0967dee3b4be6a9efac9f988f86ae47987a6219c8da6e9b18d3818fc99c6
-MISC ChangeLog 1170 RMD160 80f82b3594d151af252781ebe1045920954134cd SHA1 51408c8462fa6c88da87212179bafeba5e2050f8 SHA256 3e9bb5d66503c913b0a9bfaaa16077be735dc83c2855325b84722fed3c1e6338
-MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
+EBUILD xfce4-settings-9999.ebuild 1010 RMD160 246297c34ba9d3a2f0da9098229caa6f215c872a SHA1 bcdc6c909aff414ddaee4d83d7ae645d999982e8 SHA256 1f7b237e806b54835ee438c71beb6c031de2672cf935c6cddd1af6566251bb21
+MISC ChangeLog 1299 RMD160 ced23e90af43f38386f9f8d4859d07fa22737d5e SHA1 cd71f859b53754736f31d21a8ee48bbc18ebbe33 SHA256 f220f52d7c766d5b27e9ce39c08dc858967ff63e2de04ecf81fcf547d3b7713c
+MISC metadata.xml 252 RMD160 0238e19164de9af8e6a05725a319063a57f8142c SHA1 fe67c03682018f72a05352da7fa3fb34c8307bff SHA256 8f89f930e81f30b402c2a69c33d5f6278375ea4cc6ea292ce62d3a3ba86003ce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXXbYACgkQKhnDs22gwa++eACcCDqhBBQYkyMDImGU2gPwvzaj
-bl0AoPcUyVhLiG3Ty4PxL2JAgvAemxW3
-=raPv
+iEYEARECAAYFAkkXgZcACgkQKhnDs22gwa+08QCg1u8cHkb0YLRRjaaKh6ivXT1j
+H9kAnAt5xxl43zDLdNcyuDyeL0lvI3Bt
+=ppKZ
 -----END PGP SIGNATURE-----
