@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>xfce</herd>
+<use>
+	<flag name='sound'>Enable sound event support with media-libs/libcanberra</flag>
+</use>
 </pkgmetadata>
