@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Nov 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
+  xfce4-settings-9999.ebuild:
+  Add USE=sound for libcanberra
+
   09 Nov 2008; Christoph Mende <angelos@gentoo.org>
   xfce4-settings-9999.ebuild:
   Fix dependencies
